--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WXXPlayer</string>
+
+    <string name="typeface">typeface</string>
+    <string name="typeface2">typeface2</string>
 </resources>
